@@ -7,70 +7,70 @@
   </lines>
   <stations>
     <!-- https://cs.wikipedia.org/wiki/A_(linka_metra_v_Praze) -->
-    <station id="A01" name="Nemocnice Motol" line="A" link="A02"/>
-    <station id="A02" name="Petřiny" line="A" link="A01,A03"/>
-    <station id="A03" name="Nádraží Veleslavín" line="A" link="A02,A04"/>
-    <station id="A04" name="Bořislavka" line="A" link="A03,A05"/>
-    <station id="A05" name="Dejvická" line="A" link="A04,A06"/>
-    <station id="A06" name="Hradčanská" line="A" link="A05,A07"/>
-    <station id="A07" name="Malostranská" line="A" link="A06,A08"/>
-    <station id="A08" name="Staroměstská" line="A" link="A07,A09"/>
-    <station id="A09" name="Můstek" line="A" link="A08,A10" other_link="Tunnel:B13"/>
-    <station id="A10" name="Muzeum" line="A" link="A09,A11" other_link="Tunnel:C10"/>
-    <station id="A11" name="Náměstí Míru" line="A" link="A10,A12"/>
-    <station id="A12" name="Jiřího z Poděbrad" line="A" link="A11,A13"/>
-    <station id="A13" name="Flora" line="A" link="A12,A14"/>
-    <station id="A14" name="Želivského" line="A" link="A13,A15"/>
-    <station id="A15" name="Strašnická" line="A" link="A14,A16"/>
-    <station id="A16" name="Skalka" line="A" link="A15,A17"/>
-    <station id="A17" name="Depo Hostivař" line="A" link="A16"/>
+    <station id="A01" name="Nemocnice Motol" line="A:1" link="A02"/>
+    <station id="A02" name="Petřiny" line="A:2" link="A01,A03"/>
+    <station id="A03" name="Nádraží Veleslavín" line="A:3" link="A02,A04"/>
+    <station id="A04" name="Bořislavka" line="A:4" link="A03,A05"/>
+    <station id="A05" name="Dejvická" line="A:5" link="A04,A06"/>
+    <station id="A06" name="Hradčanská" line="A:6" link="A05,A07"/>
+    <station id="A07" name="Malostranská" line="A:7" link="A06,A08"/>
+    <station id="A08" name="Staroměstská" line="A:8" link="A07,A09"/>
+    <station id="A09" name="Můstek" line="A:9" link="A08,A10" other_link="Tunnel:B13"/>
+    <station id="A10" name="Muzeum" line="A:10" link="A09,A11" other_link="Tunnel:C10"/>
+    <station id="A11" name="Náměstí Míru" line="A:11" link="A10,A12"/>
+    <station id="A12" name="Jiřího z Poděbrad" line="A:12" link="A11,A13"/>
+    <station id="A13" name="Flora" line="A:13" link="A12,A14"/>
+    <station id="A14" name="Želivského" line="A:14" link="A13,A15"/>
+    <station id="A15" name="Strašnická" line="A:15" link="A14,A16"/>
+    <station id="A16" name="Skalka" line="A:16" link="A15,A17"/>
+    <station id="A17" name="Depo Hostivař" line="A:17" link="A16"/>
 
     <!-- https://cs.wikipedia.org/wiki/B_(linka_metra_v_Praze) -->
-    <station id="B01" name="Zličín" line="B" link="B02"/>
-    <station id="B02" name="Stodůlky" line="B" link="B01,B03"/>
-    <station id="B03" name="Luka" line="B" link="B02,B04"/>
-    <station id="B04" name="Lužiny" line="B" link="B03,B05"/>
-    <station id="B05" name="Hůrka" line="B" link="B04,B06"/>
-    <station id="B06" name="Nové Butovice" line="B" link="B05,B07"/>
-    <station id="B07" name="Jinonice" line="B" link="B06,B08"/>
-    <station id="B08" name="Radlická" line="B" link="B07,B09"/>
-    <station id="B09" name="Smíchovské nádraží" line="B" link="B08,B10"/>
-    <station id="B10" name="Anděl" line="B" link="B09,B11"/>
-    <station id="B11" name="Karlovo náměstí" line="B" link="B10,B12"/>
-    <station id="B12" name="Národní třída" line="B" link="B11,B13"/>
-    <station id="B13" name="Můstek" line="B" link="B12,B14" other_link="Tunnel:A05"/>
-    <station id="B14" name="Náměstí Republiky" line="B" link="B13,B15"/>
-    <station id="B15" name="Florenc" line="B" link="B14,B16" other_link="Tunnel:C08"/>
-    <station id="B16" name="Křižíkova" line="B" link="B15,B17"/>
-    <station id="B17" name="Invalidovna" line="B" link="B16,B18"/>
-    <station id="B18" name="Palmovka" line="B" link="B17,B19"/>
-    <station id="B19" name="Českomoravská" line="B" link="B18,B20"/>
-    <station id="B20" name="Vysočanská" line="B" link="B19,B21"/>
-    <station id="B21" name="Kolbenova" line="B" link="B20,B22"/>
-    <station id="B22" name="Hloubětín" line="B" link="B21,B23"/>
-    <station id="B23" name="Rajská zahrada" line="B" link="B22,B24"/>
-    <station id="B24" name="Černý Most" line="B" link="B23"/>
+    <station id="B01" name="Zličín" line="B:1" link="B02"/>
+    <station id="B02" name="Stodůlky" line="B:2" link="B01,B03"/>
+    <station id="B03" name="Luka" line="B:3" link="B02,B04"/>
+    <station id="B04" name="Lužiny" line="B:4" link="B03,B05"/>
+    <station id="B05" name="Hůrka" line="B:5" link="B04,B06"/>
+    <station id="B06" name="Nové Butovice" line="B:6" link="B05,B07"/>
+    <station id="B07" name="Jinonice" line="B:7" link="B06,B08"/>
+    <station id="B08" name="Radlická" line="B:8" link="B07,B09"/>
+    <station id="B09" name="Smíchovské nádraží" line="B:9" link="B08,B10"/>
+    <station id="B10" name="Anděl" line="B:10" link="B09,B11"/>
+    <station id="B11" name="Karlovo náměstí" line="B:11" link="B10,B12"/>
+    <station id="B12" name="Národní třída" line="B:12" link="B11,B13"/>
+    <station id="B13" name="Můstek" line="B:13" link="B12,B14" other_link="Tunnel:A05"/>
+    <station id="B14" name="Náměstí Republiky" line="B:14" link="B13,B15"/>
+    <station id="B15" name="Florenc" line="B:15" link="B14,B16" other_link="Tunnel:C08"/>
+    <station id="B16" name="Křižíkova" line="B:16" link="B15,B17"/>
+    <station id="B17" name="Invalidovna" line="B:17" link="B16,B18"/>
+    <station id="B18" name="Palmovka" line="B:18" link="B17,B19"/>
+    <station id="B19" name="Českomoravská" line="B:19" link="B18,B20"/>
+    <station id="B20" name="Vysočanská" line="B:20" link="B19,B21"/>
+    <station id="B21" name="Kolbenova" line="B:21" link="B20,B22"/>
+    <station id="B22" name="Hloubětín" line="B:22" link="B21,B23"/>
+    <station id="B23" name="Rajská zahrada" line="B:23" link="B22,B24"/>
+    <station id="B24" name="Černý Most" line="B:24" link="B23"/>
 
     <!-- https://cs.wikipedia.org/wiki/C_(linka_metra_v_Praze) -->
-    <station id="C01" name="Letňany" line="C" link="C02"/>
-    <station id="C02" name="Prosek" line="C" link="C01,C03"/>
-    <station id="C03" name="Střížkov" line="C" link="C02,C04"/>
-    <station id="C04" name="Ládví" line="C" link="C03,C05"/>
-    <station id="C05" name="Kobylisy" line="C" link="C04,C06"/>
-    <station id="C06" name="Nádraží Holešovice" line="C" link="C05,C07"/>
-    <station id="C07" name="Vltavská" line="C" link="C06,C08"/>
-    <station id="C08" name="Florenc" line="C" link="C07,C09" other_link="Tunnel:B15"/>
-    <station id="C09" name="Hlavní nádraží" line="C" link="C08,C10"/>
-    <station id="C10" name="Muzeum" line="C" link="C09,C11" other_link="Tunnel:A06"/>
-    <station id="C11" name="I. P. Pavlova" line="C" link="C10,C12"/>
-    <station id="C12" name="Vyšehrad" line="C" link="C11,C13"/>
-    <station id="C13" name="Pražského povstání" line="C" link="C12,C14"/>
-    <station id="C14" name="Pankrác" line="C" link="C13,C15"/>
-    <station id="C15" name="Budějovická" line="C" link="C14,C16"/>
-    <station id="C16" name="Kačerov" line="C" link="C15,C17"/>
-    <station id="C17" name="Roztyly" line="C" link="C16,C18"/>
-    <station id="C18" name="Chodov" line="C" link="C17,C19"/>
-    <station id="C19" name="Opatov" line="C" link="C18,C20"/>
-    <station id="C20" name="Háje" line="C" link="C19"/>
+    <station id="C01" name="Letňany" line="C:1" link="C02"/>
+    <station id="C02" name="Prosek" line="C:2" link="C01,C03"/>
+    <station id="C03" name="Střížkov" line="C:3" link="C02,C04"/>
+    <station id="C04" name="Ládví" line="C:4" link="C03,C05"/>
+    <station id="C05" name="Kobylisy" line="C:5" link="C04,C06"/>
+    <station id="C06" name="Nádraží Holešovice" line="C:6" link="C05,C07"/>
+    <station id="C07" name="Vltavská" line="C:7" link="C06,C08"/>
+    <station id="C08" name="Florenc" line="C:8" link="C07,C09" other_link="Tunnel:B15"/>
+    <station id="C09" name="Hlavní nádraží" line="C:9" link="C08,C10"/>
+    <station id="C10" name="Muzeum" line="C:10" link="C09,C11" other_link="Tunnel:A06"/>
+    <station id="C11" name="I. P. Pavlova" line="C:11" link="C10,C12"/>
+    <station id="C12" name="Vyšehrad" line="C:12" link="C11,C13"/>
+    <station id="C13" name="Pražského povstání" line="C:13" link="C12,C14"/>
+    <station id="C14" name="Pankrác" line="C:14" link="C13,C15"/>
+    <station id="C15" name="Budějovická" line="C:15" link="C14,C16"/>
+    <station id="C16" name="Kačerov" line="C:16" link="C15,C17"/>
+    <station id="C17" name="Roztyly" line="C:17" link="C16,C18"/>
+    <station id="C18" name="Chodov" line="C:18" link="C17,C19"/>
+    <station id="C19" name="Opatov" line="C:19" link="C18,C20"/>
+    <station id="C20" name="Háje" line="C:20" link="C19"/>
   </stations>
 </tube>
